--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 
 .title-container {
   height: 90vh;
-  /* background: url("image/bg.jpg") center center no-repeat; */
+   background: url("components/image/bg.jpg") center center no-repeat; 
   background-size: cover;
   display: flex;
   align-items: center;
